Refine Scroll post feed
